--- a/Neural-Networks/03-main-dataframe.ipynb
+++ b/Neural-Networks/03-main-dataframe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+      "11490434/11490434 [==============================] - 2s 0us/step\n"
+     ]
+    }
+   ],
    "source": [
     "# MNIST veri setini yükleme\n",
     "(X_train, y_train), (X_test, y_test) = mnist.load_data()\n",
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,9 +119,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 1\n",
+      "Network 1: Accuracy 0.9085000157356262  | Params {'first_layer_neurons': 32, 'hidden_layers': 1, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
+      "Network 2: Accuracy 0.9340000152587891  | Params {'first_layer_neurons': 128, 'hidden_layers': 1, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
+      "Network 3: Accuracy 0.9449999928474426  | Params {'first_layer_neurons': 64, 'hidden_layers': 3, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
+      "Network 4: Accuracy 0.9235000014305115  | Params {'first_layer_neurons': 64, 'hidden_layers': 1, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
+      "Network 5: Accuracy 0.9484999775886536  | Params {'first_layer_neurons': 128, 'hidden_layers': 1, 'hidden_layer_neurons': 64, 'activation': 'relu'} |  \n",
+      "Network 6: Accuracy 0.934333324432373  | Params {'first_layer_neurons': 64, 'hidden_layers': 2, 'hidden_layer_neurons': 32, 'activation': 'relu'} |  \n",
+      "Network 7: Accuracy 0.9073333144187927  | Params {'first_layer_neurons': 32, 'hidden_layers': 1, 'hidden_layer_neurons': 32, 'activation': 'relu'} |  \n",
+      "Network 8: Accuracy 0.8838333487510681  | Params {'first_layer_neurons': 128, 'hidden_layers': 2, 'hidden_layer_neurons': 64, 'activation': 'tanh'} |  \n"
+     ]
+    }
+   ],
    "source": [
     "# Her nesil için döngü\n",
     "for generation in range(num_generations):\n",
