--- a/SVM/02- main-dataframe.ipynb
+++ b/SVM/02- main-dataframe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +93,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 1\n",
+      "Individual 1: Accuracy: 0.9298245614035088 | Weights: {'C': 1, 'kernel': 'rbf', 'gamma': 'scale'} | Loss: 0.07017543859649122 | Fitness: 0.9298245614035088  \n",
+      "Individual 2: Accuracy: 0.6666666666666666 | Weights: {'C': 0.1, 'kernel': 'rbf', 'gamma': 'auto'} | Loss: 0.33333333333333337 | Fitness: 0.6666666666666666  \n",
+      "Individual 3: Accuracy: 0.39473684210526316 | Weights: {'C': 10, 'kernel': 'sigmoid', 'gamma': 'scale'} | Loss: 0.6052631578947368 | Fitness: 0.39473684210526316  \n",
+      "Individual 4: Accuracy: 0.9035087719298246 | Weights: {'C': 0.1, 'kernel': 'rbf', 'gamma': 'scale'} | Loss: 0.0964912280701754 | Fitness: 0.9035087719298246  \n",
+      "Individual 5: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 6: Accuracy: 0.9298245614035088 | Weights: {'C': 100, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.07017543859649122 | Fitness: 0.9298245614035088  \n",
+      "Individual 7: Accuracy: 0.9210526315789473 | Weights: {'C': 10, 'kernel': 'rbf', 'gamma': 'scale'} | Loss: 0.07894736842105265 | Fitness: 0.9210526315789473  \n",
+      "Individual 8: Accuracy: 0.6666666666666666 | Weights: {'C': 0.1, 'kernel': 'rbf', 'gamma': 'auto'} | Loss: 0.33333333333333337 | Fitness: 0.6666666666666666  \n",
+      "Individual 9: Accuracy: 0.6666666666666666 | Weights: {'C': 10, 'kernel': 'rbf', 'gamma': 'auto'} | Loss: 0.33333333333333337 | Fitness: 0.6666666666666666  \n",
+      "Individual 10: Accuracy: 0.9035087719298246 | Weights: {'C': 0.1, 'kernel': 'rbf', 'gamma': 'scale'} | Loss: 0.0964912280701754 | Fitness: 0.9035087719298246  \n",
+      "Generation 2\n",
+      "Individual 1: Accuracy: 0.9210526315789473 | Weights: {'C': 10, 'kernel': 'rbf', 'gamma': 'scale'} | Loss: 0.07894736842105265 | Fitness: 0.9210526315789473  \n",
+      "Individual 2: Accuracy: 0.9298245614035088 | Weights: {'C': 1, 'kernel': 'rbf', 'gamma': 'scale'} | Loss: 0.07017543859649122 | Fitness: 0.9298245614035088  \n",
+      "Individual 3: Accuracy: 0.9298245614035088 | Weights: {'C': 100, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.07017543859649122 | Fitness: 0.9298245614035088  \n",
+      "Individual 4: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 5: Accuracy: 0.9385964912280702 | Weights: {'C': 10, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 6: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Generation 3\n",
+      "Individual 1: Accuracy: 0.9298245614035088 | Weights: {'C': 100, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.07017543859649122 | Fitness: 0.9298245614035088  \n",
+      "Individual 2: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 3: Accuracy: 0.9385964912280702 | Weights: {'C': 10, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 4: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 5: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 6: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Generation 4\n",
+      "Individual 1: Accuracy: 0.9385964912280702 | Weights: {'C': 10, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 2: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 3: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 4: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 5: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 6: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Generation 5\n",
+      "Individual 1: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 2: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 3: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 4: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 5: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n",
+      "Individual 6: Accuracy: 0.9385964912280702 | Weights: {'C': 1, 'kernel': 'linear', 'gamma': 'scale'} | Loss: 0.06140350877192979 | Fitness: 0.9385964912280702  \n"
+     ]
+    }
+   ],
    "source": [
     "# Her nesil için döngü\n",
     "for generation in range(num_generations):\n",
