--- a/Neural-Networks/03-main-dataframe.ipynb
+++ b/Neural-Networks/03-main-dataframe.ipynb
@@ -79,16 +79,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "11490434/11490434 [==============================] - 2s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# MNIST veri setini yükleme\n",
     "(X_train, y_train), (X_test, y_test) = mnist.load_data()\n",
@@ -127,14 +118,44 @@
      "output_type": "stream",
      "text": [
       "Generation 1\n",
-      "Network 1: Accuracy 0.9085000157356262  | Params {'first_layer_neurons': 32, 'hidden_layers': 1, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
-      "Network 2: Accuracy 0.9340000152587891  | Params {'first_layer_neurons': 128, 'hidden_layers': 1, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
-      "Network 3: Accuracy 0.9449999928474426  | Params {'first_layer_neurons': 64, 'hidden_layers': 3, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
-      "Network 4: Accuracy 0.9235000014305115  | Params {'first_layer_neurons': 64, 'hidden_layers': 1, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
-      "Network 5: Accuracy 0.9484999775886536  | Params {'first_layer_neurons': 128, 'hidden_layers': 1, 'hidden_layer_neurons': 64, 'activation': 'relu'} |  \n",
-      "Network 6: Accuracy 0.934333324432373  | Params {'first_layer_neurons': 64, 'hidden_layers': 2, 'hidden_layer_neurons': 32, 'activation': 'relu'} |  \n",
-      "Network 7: Accuracy 0.9073333144187927  | Params {'first_layer_neurons': 32, 'hidden_layers': 1, 'hidden_layer_neurons': 32, 'activation': 'relu'} |  \n",
-      "Network 8: Accuracy 0.8838333487510681  | Params {'first_layer_neurons': 128, 'hidden_layers': 2, 'hidden_layer_neurons': 64, 'activation': 'tanh'} |  \n"
+      "Network 1: Accuracy 0.9446666836738586  | Params {'first_layer_neurons': 128, 'hidden_layers': 2, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
+      "Network 2: Accuracy 0.934166669845581  | Params {'first_layer_neurons': 64, 'hidden_layers': 2, 'hidden_layer_neurons': 32, 'activation': 'relu'} |  \n",
+      "Network 3: Accuracy 0.8895000219345093  | Params {'first_layer_neurons': 128, 'hidden_layers': 1, 'hidden_layer_neurons': 64, 'activation': 'tanh'} |  \n",
+      "Network 4: Accuracy 0.9006666541099548  | Params {'first_layer_neurons': 64, 'hidden_layers': 1, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
+      "Network 5: Accuracy 0.8536666631698608  | Params {'first_layer_neurons': 128, 'hidden_layers': 3, 'hidden_layer_neurons': 128, 'activation': 'tanh'} |  \n",
+      "Network 6: Accuracy 0.8881666660308838  | Params {'first_layer_neurons': 128, 'hidden_layers': 3, 'hidden_layer_neurons': 64, 'activation': 'tanh'} |  \n",
+      "Network 7: Accuracy 0.8581666946411133  | Params {'first_layer_neurons': 64, 'hidden_layers': 1, 'hidden_layer_neurons': 64, 'activation': 'tanh'} |  \n",
+      "Network 8: Accuracy 0.846833348274231  | Params {'first_layer_neurons': 64, 'hidden_layers': 2, 'hidden_layer_neurons': 32, 'activation': 'tanh'} |  \n",
+      "Network 9: Accuracy 0.9478333592414856  | Params {'first_layer_neurons': 128, 'hidden_layers': 3, 'hidden_layer_neurons': 64, 'activation': 'relu'} |  \n",
+      "Network 10: Accuracy 0.8661666512489319  | Params {'first_layer_neurons': 64, 'hidden_layers': 1, 'hidden_layer_neurons': 64, 'activation': 'tanh'} |  \n",
+      "Generation 2\n",
+      "Network 1: Accuracy 0.9100000262260437  | Params {'first_layer_neurons': 64, 'hidden_layers': 1, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
+      "Network 2: Accuracy 0.9333333373069763  | Params {'first_layer_neurons': 64, 'hidden_layers': 2, 'hidden_layer_neurons': 32, 'activation': 'relu'} |  \n",
+      "Network 3: Accuracy 0.9449999928474426  | Params {'first_layer_neurons': 128, 'hidden_layers': 2, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
+      "Network 4: Accuracy 0.940833330154419  | Params {'first_layer_neurons': 128, 'hidden_layers': 3, 'hidden_layer_neurons': 64, 'activation': 'relu'} |  \n",
+      "Network 5: Accuracy 0.9369999766349792  | Params {'first_layer_neurons': 32, 'hidden_layers': 2, 'hidden_layer_neurons': 32, 'activation': 'relu'} |  \n",
+      "Network 6: Accuracy 0.878333330154419  | Params {'first_layer_neurons': 128, 'hidden_layers': 1, 'hidden_layer_neurons': 64, 'activation': 'tanh'} |  \n",
+      "Generation 3\n",
+      "Network 1: Accuracy 0.9411666393280029  | Params {'first_layer_neurons': 64, 'hidden_layers': 2, 'hidden_layer_neurons': 32, 'activation': 'relu'} |  \n",
+      "Network 2: Accuracy 0.9098333120346069  | Params {'first_layer_neurons': 32, 'hidden_layers': 2, 'hidden_layer_neurons': 32, 'activation': 'relu'} |  \n",
+      "Network 3: Accuracy 0.9426666498184204  | Params {'first_layer_neurons': 128, 'hidden_layers': 3, 'hidden_layer_neurons': 64, 'activation': 'relu'} |  \n",
+      "Network 4: Accuracy 0.9456666707992554  | Params {'first_layer_neurons': 128, 'hidden_layers': 2, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
+      "Network 5: Accuracy 0.9384999871253967  | Params {'first_layer_neurons': 128, 'hidden_layers': 3, 'hidden_layer_neurons': 64, 'activation': 'relu'} |  \n",
+      "Network 6: Accuracy 0.9505000114440918  | Params {'first_layer_neurons': 128, 'hidden_layers': 2, 'hidden_layer_neurons': 64, 'activation': 'relu'} |  \n",
+      "Generation 4\n",
+      "Network 1: Accuracy 0.9133333563804626  | Params {'first_layer_neurons': 64, 'hidden_layers': 2, 'hidden_layer_neurons': 32, 'activation': 'relu'} |  \n",
+      "Network 2: Accuracy 0.953000009059906  | Params {'first_layer_neurons': 128, 'hidden_layers': 3, 'hidden_layer_neurons': 64, 'activation': 'relu'} |  \n",
+      "Network 3: Accuracy 0.9434999823570251  | Params {'first_layer_neurons': 128, 'hidden_layers': 2, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
+      "Network 4: Accuracy 0.9303333163261414  | Params {'first_layer_neurons': 128, 'hidden_layers': 2, 'hidden_layer_neurons': 64, 'activation': 'relu'} |  \n",
+      "Network 5: Accuracy 0.9273333549499512  | Params {'first_layer_neurons': 128, 'hidden_layers': 2, 'hidden_layer_neurons': 32, 'activation': 'relu'} |  \n",
+      "Network 6: Accuracy 0.9309999942779541  | Params {'first_layer_neurons': 64, 'hidden_layers': 2, 'hidden_layer_neurons': 32, 'activation': 'relu'} |  \n",
+      "Generation 5\n",
+      "Network 1: Accuracy 0.9473333358764648  | Params {'first_layer_neurons': 128, 'hidden_layers': 2, 'hidden_layer_neurons': 64, 'activation': 'relu'} |  \n",
+      "Network 2: Accuracy 0.9380000233650208  | Params {'first_layer_neurons': 64, 'hidden_layers': 2, 'hidden_layer_neurons': 32, 'activation': 'relu'} |  \n",
+      "Network 3: Accuracy 0.9445000290870667  | Params {'first_layer_neurons': 128, 'hidden_layers': 2, 'hidden_layer_neurons': 128, 'activation': 'relu'} |  \n",
+      "Network 4: Accuracy 0.9508333206176758  | Params {'first_layer_neurons': 128, 'hidden_layers': 3, 'hidden_layer_neurons': 64, 'activation': 'relu'} |  \n",
+      "Network 5: Accuracy 0.9488333463668823  | Params {'first_layer_neurons': 128, 'hidden_layers': 2, 'hidden_layer_neurons': 64, 'activation': 'relu'} |  \n",
+      "Network 6: Accuracy 0.9483333230018616  | Params {'first_layer_neurons': 64, 'hidden_layers': 3, 'hidden_layer_neurons': 32, 'activation': 'relu'} |  \n"
      ]
     }
    ],
