--- a/Neural-Networks/03-main-dataframe.ipynb
+++ b/Neural-Networks/03-main-dataframe.ipynb
@@ -480,6 +480,17 @@
     "\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dataframe i csv olarak kaydet\n",
+    "\n",
+    "df.to_csv('results.csv', index=True)\n"
+   ]
   }
  ],
  "metadata": {
